# recipe-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml
app/config/: settings.py
app/core/: admin.py  models.py
app/core/management/commands/: wait_for_db.py
app/core/migrations/: 0001_add_user_model.py
app/core/tests/: test_admin.py  test_commands.py  test_models.py
