[tool.poetry]
name = "recipe-api"
version = "0.1.0"
description = ""
authors = ["fernando"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^3.2"
pyscopg2 = "^66.0.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
