[tool.poetry]
name = "recipe-api"
version = "0.1.0"
description = ""
authors = ["fernando"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.9.17, <3.10"
django = "^3.2"
psycopg2 = "^2.9.6"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
